--- a/index.html
+++ b/index.html
@@ -1394,7 +1394,7 @@
                 <a href="#solucion">Solución</a>
                 <a href="#funciones">Funciones</a>
                 <a href="#precio">Precio</a>
-                <a href="https://agent-connect-2a8a10af.base44.app" class="btn btn-primary">Empezar Gratis</a>
+                <a href="https://app.proagent-ai.com" class="btn btn-primary">Empezar Gratis</a>
             </div>
         </div>
     </nav>
@@ -1414,7 +1414,7 @@
                     El único CRM que puedes actualizar con voz. Registra reuniones, crea tareas y gestiona jugadores mientras conduces o caminas por el estadio.
                 </p>
                 <div class="hero-cta">
-                    <a href="https://agent-connect-2a8a10af.base44.app" class="btn btn-primary btn-large">
+                    <a href="https://app.proagent-ai.com" class="btn btn-primary btn-large">
                         Probar 30 días gratis →
                     </a>
                     <a href="#solucion" class="btn btn-secondary btn-large">
@@ -1626,7 +1626,7 @@
                         Soporte prioritario
                     </li>
                 </ul>
-                <a href="https://agent-connect-2a8a10af.base44.app" class="btn btn-primary btn-large pricing-cta">
+                <a href="https://app.proagent-ai.com" class="btn btn-primary btn-large pricing-cta">
                     Empezar prueba gratuita
                 </a>
                 <p class="pricing-note">Sin tarjeta de crédito. Cancela cuando quieras.</p>
@@ -1643,7 +1643,7 @@
                 30 días gratis para probarlo todo.
             </p>
             <div class="cta-buttons">
-                <a href="https://agent-connect-2a8a10af.base44.app" class="btn btn-primary btn-large">
+                <a href="https://app.proagent-ai.com" class="btn btn-primary btn-large">
                     Empezar gratis →
                 </a>
                 <a href="/cdn-cgi/l/email-protection#432d2a202c0333312c2224262d37266d202c2e" class="btn btn-secondary btn-large">
